EME: close() should return a resolved promise if session already closed

BUG=690664
TEST=new test passes

Review-Url: https://codereview.chromium.org/2688263002
Cr-Commit-Position: refs/heads/master@{#449804}

Former-commit-id: 665c048b2e508b5cc566810816a77bfd4bfdb9db